#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

cmake_minimum_required(VERSION 3.25)

project(Selectors CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(selectors SHARED SelectorExpression.cpp SelectorToken.cpp SelectorValue.cpp)
set_target_properties(selectors
    PROPERTIES
        INTERPROCEDURAL_OPTIMIZATION on
        COMPILE_FLAGS "-fvisibility-inlines-hidden -fvisibility=hidden")

add_executable(selector_tests SelectorTests.cpp)
target_link_libraries(selector_tests selectors)
